sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:14: error: value ++ is not a member of Int
        j++
         ^